--- a/source/components/about.html
+++ b/source/components/about.html
@@ -27,10 +27,10 @@
                 <a href="#about" class="nav__link active">História</a>
               </li>
               <li class="nav__item">
-                <a href="#representative" class="nav__link">Camisa</a>
+                <a href="../../index.html" class="nav__link">Camisa</a>
               </li>
               <li class="nav__item">
-                <a href="#contact" class="nav__link">Programação</a>
+                <a href="../../index.html" class="nav__link">Programação</a>
               </li>
               <li class="nav__item">
                 <a href="#contact" class="nav__link">Mapa Virtual</a>
@@ -46,17 +46,16 @@
       <section class="about section bd-container" id="about">
         <div class="about__container bd-grid">
           <div class="about__data">
-            <span class="section-subtitle about__initial">Feira de Profissões 2014</span>
+            <span class="section-subtitle about__initial">Feira de Profissões</span>
             <h2 class="section-title about__initial">Nossa História</h2>
             <p class="about__description">
-                Em 2014 a Escola Estadual Professor Ernani Rodrigues promoveu um evento inedito na cidade. 
-                Com o Objetivo de orientar os alunos a escolha na sua Profissão.
+              Desde a nossa primeira edição, nossa missão principal é transformar o seus sonhos em realidade. Focando em ajudar nossos alunos <b class="bold-color">a tirar seus projetos de vida do papel.</b>
             </p>
-            <a href="#about-02" class="button"
+            <a href="#services" class="button"
               >Explorar &#8594;</a
             >
           </div>
-          <img src="../images/jornal.jpg" class="representative__img" />
+          <img src="../images/focus.jpg" class="representative__img" />
         </div>
       </section>
 
@@ -72,9 +71,9 @@
                 <p class="services__description">A feira permite que os alunos criem conexões valiosas com profissionais, facilitando o acesso a informações e futuras oportunidades.
                 </p>
             </div>
-            <div class="services__content"> <i class="bx bx-compass services__icon"></i>
+            <div class="services__content"> <i class="fa-solid fa-compass services__icon"></i>
                 <h3 class="services__title">Escolha</h3>
-                <p class="services__description">A feira permite que os alunos explorem diferentes áreas de interesse, auxiliando na escolha de suas futuras carreiras.</p>
+                <p class="services__description">Nossa feira permite que os alunos explorem diferentes áreas de interesse, auxiliando na escolha de suas futuras carreiras.</p>
             </div>
         </div>
     </section>
@@ -84,7 +83,7 @@
         <div class="about__container bd-grid">
             <div class="about__data"> <span class="section-subtitle about__initial">Feira de Profissões 2014</span>
                 <h2 class="section-title about__initial">Convite</h2>
-                <p class="about__description">"A realização de uma Feira de Profissões na cidade de Assis, SP, vinha sendo requerida, há alguns anos, algumas vezes pela comunidade, outras, pelas universidades." <b style="color: #e7a704;"> - Artigo Unesp</b></p>
+                <p class="about__description">"A realização de uma Feira de Profissões na cidade de Assis, SP, vinha sendo requerida, há alguns anos, algumas vezes pela comunidade, outras, pelas universidades." <b class="bold-color"> - Artigo Unesp</b></p>
                 <a href="https://www2.unesp.br/sharer.php?noticia=15228" target="_blank" class="button"
               >Leia o Artigo </a
             >
@@ -94,29 +93,30 @@
 
     <section class="about section bd-container" id="about-02">
       <div class="about__container bd-grid">
-          <div class="about__data"> <span class="section-subtitle about__initial">Feira de Profissões 2014</span>
+          <div class="about__data"> <span class="section-subtitle about__initial"> Ernani Pro</span>
               <h2 class="section-title about__initial">Oficinas</h2>
-              <p class="about__description">Já em nossa primeira edição contamos com exposições de grandes faculdades além de diversas palestras com professores.</p>
+              <p class="about__description">Dessa forma, colocamos em prática o <b class="bold-color">projeto de vida</b> dos alunos por meio de exposições, oficinas e palestras ao longo da feira.
+              </p>
               <a href="INDEXFAKE" target="_blank" class="button"
             >Programação 2024 </a
           >
-          </div><img src="../images/protagonismo feira 4.jpg" class="representative__img" >
+          </div><img src="../images/workshop.jpg" class="representative__img" >
       </div>
   </section>
 
     <section class="about section bd-container" id="about">
         <div class="about__container bd-grid">
           <div class="about__data">
-            <span class="section-subtitle about__initial">Feira de Profissões 2014</span>
+            <span class="section-subtitle about__initial">Feira de Profissões</span>
             <h2 class="section-title about__initial">Camiseta</h2>
             <p class="about__description">
-                Já na primeira edição da Feira, foi constituido a Arte, Camiseta. E o  Slogan <b style="color: #e7a704;">" Uma Feira de Ideias Para Seu Futuro "</b> feito pelo aluno Klinger do 2º colegial.
+                Já na primeira edição da Feira, foi constituido a Arte, Camiseta. E o  Slogan <b class="bold-color">" Qual o seu projeto de vida? "</b>
             </p>
             <a href="../../index.html#contact" class="button"
               >Camiseta 2024</a
             >
           </div>
-          <img src="../images/protagonismo feira 2.jpg" class="about__img" />
+          <img src="../images/shirt.jpg" class="about__img" />
         </div>
       </section>
 
@@ -188,4 +188,5 @@
     <script src="../javascript/sr.js"></script>
     <script src="https://unpkg.com/jquery@3.6.1/dist/jquery.js"></script>
     <script src="../javascript/scrollup.js"></script>
+    <script src="https://kit.fontawesome.com/65738bccfe.js" crossorigin="anonymous"></script>
 </html>
