Timer and about

--- a/source/components/about.html
+++ b/source/components/about.html
@@ -130,58 +130,58 @@
         </div>
     </section>
     <footer class="footer section bd-container">
-        <div class="footer__container bd-grid">
-            <div class="footer__content"> <a href="#about" class="footer__logo">Ernani Pro 24</a> <span
-                    class="footer__description">Feira de Profissões</span>
-                <div>  <a href="https://instagram.com/radiobemtevi?igshid=MzRlODBiNWFlZA==" target="_blank" class="footer__social"><i class="bx bxl-instagram"></i></a> 
-                  <a href="https://youtube.com/@radiobem-te-vige7752?si=r1vlNIpGLVzRHb3o&sub_confirmation=1" target="_blank" class="footer__social"><i class="bx bxl-youtube"></i></a> 
-                  <a href="https://www.tiktok.com/@radiobemtevi?_t=8gvfimnrooa&_r=1" target="_blank" class="footer__social"><i class="bx bxl-tiktok"></i></a>
-                
-                </div>
-            </div>
-            <div class="footer__content">
-                <h3 class="footer__title">Conceito</h3>
-                <ul>
-                    <li>
-                        <p class="footer__link">Estimulante</p>
-                    </li>
-                    <li>
-                        <p class="footer__link">acessível</p>
-                    </li>
-                    <li>
-                        <p class="footer__link">Falta texto</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer__content">
-                <h3 class="footer__title">Informações</h3>
-                <ul>
-                    <li>
-                        <p class="footer__link">Agenda</p>
-                    </li>
-                    <li>
-                        <p class="footer__link">Contato</p>
-                    </li>
-                    <li>
-                        <p class="footer__link">Mapa</p>
-                    </li>
-                    
-                </ul>
-            </div>
-            <div class="footer__content">
-                <h3 class="footer__title">Endereço</h3>
-                <ul>
-                    <li class="footer__link">Assis - SP - Vila Xavier</li>
-                    <li class="footer__link"> Rua Sr do Bonfim, 1165 </li>
-                    <li class="footer__link">(18)3322-4289</li>
-                    <li class="footer__link">radiobemtivicontato@gmail.com</li><a
-                        href="https://www.google.com.br/maps/place/Escola+Estadual+Prof.+Ernani+Rodrigues/@-22.6689281,-50.4261237,17z/data=!3m1!4b1!4m6!3m5!1s0x9495398f1479965b:0x109c527dca61c3ed!8m2!3d-22.6689331!4d-50.4235488!16s%2Fg%2F11b5pj6ctn?entry=ttu"
-                        target="_blank" style="color: #e7a704;">Clique para ver no mapa.</a>
-                </ul>
-            </div>
-        </div>
-        <p class="footer__copy"><b>&#169;</b> 2024 Escola Ernani Rodrigues. <b>Todos os direitos reservados.</b></p>
-    </footer>
+      <div class="footer__container bd-grid">
+          <div class="footer__content"> <a href="#about" class="footer__logo">Ernani Pro 24</a> <span
+                  class="footer__description">Feira de Profissões</span>
+              <div>  <a href="https://instagram.com/radiobemtevi?igshid=MzRlODBiNWFlZA==" target="_blank" class="footer__social"><i class="bx bxl-instagram"></i></a> 
+                <a href="https://youtube.com/@radiobem-te-vige7752?si=r1vlNIpGLVzRHb3o&sub_confirmation=1" target="_blank" class="footer__social"><i class="bx bxl-youtube"></i></a> 
+                <a href="https://www.tiktok.com/@radiobemtevi?_t=8gvfimnrooa&_r=1" target="_blank" class="footer__social"><i class="bx bxl-tiktok"></i></a>
+              
+              </div>
+          </div>
+          <div class="footer__content">
+              <h3 class="footer__title">Piláres</h3>
+              <ul>
+                  <li>
+                      <p class="footer__link">Protagonismo</p>
+                  </li>
+                  <li>
+                      <p class="footer__link">Network</p>
+                  </li>
+                  <li>
+                      <p class="footer__link">Escolha</p>
+                  </li>
+              </ul>
+          </div>
+          <div class="footer__content">
+              <h3 class="footer__title">Informações</h3>
+              <ul>
+                  <li>
+                      <p class="footer__link">Programação</p>
+                  </li>
+                  <li>
+                      <p class="footer__link">Contatos</p>
+                  </li>
+                  <li>
+                      <p class="footer__link">Mapa</p>
+                  </li>
+                  
+              </ul>
+          </div>
+          <div class="footer__content">
+              <h3 class="footer__title">Endereço</h3>
+              <ul>
+                  <li class="footer__link">Assis - SP - Vila Xavier</li>
+                  <li class="footer__link"> Rua Sr do Bonfim, 1165 </li>
+                  <li class="footer__link">(18)3322-4289</li>
+                  <li class="footer__link">radiobemtivicontato@gmail.com</li><a
+                      href="https://www.google.com.br/maps/place/Escola+Estadual+Prof.+Ernani+Rodrigues/@-22.6689281,-50.4261237,17z/data=!3m1!4b1!4m6!3m5!1s0x9495398f1479965b:0x109c527dca61c3ed!8m2!3d-22.6689331!4d-50.4235488!16s%2Fg%2F11b5pj6ctn?entry=ttu"
+                      target="_blank" style="color: #e7a704;">Clique para ver no mapa.</a>
+              </ul>
+          </div>
+      </div>
+      <p class="footer__copy"><b>&#169;</b> 2024 Escola Ernani Rodrigues. <b>Todos os direitos reservados.</b></p>
+  </footer>
     </main>
     <script src="../javascript/index.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
