--- a/source/components/about.html
+++ b/source/components/about.html
@@ -186,5 +186,6 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://unpkg.com/jquery@3.6.1/dist/jquery.js"></script>
     <script src="https://kit.fontawesome.com/65738bccfe.js" crossorigin="anonymous"></script>
+    <script src="../javascript/header.js"></script>
     <script src="../javascript/index.js"></script>
 </html>
